fixed:overflow

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ left: 0;
 }
 body {
   margin: 0;
-  overflow: hidden; 
+  overflow-y: scroll;
   padding: 0;
   font-family: Arial, sans-serif;
   font-weight: 600;
